--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,3 +41,12 @@
 </div>
 
 </div>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Parent-Child :Calling Component from another Component Example</h1>
+    
+    <app-parent></app-parent>
+   
+
+  </div>
+</div>
